--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "name": "21127637",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
