fix production version

--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,6 @@
         "rejectUnauthorized": false
       }
     },
-    "synchronize": true,
     "ssl": true
   },
   "test": {
@@ -22,10 +21,17 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "tuan8db_x22q_user",
+    "password": "WjveHxR0epoX0FdRmMAgkNxczlOz9hIB",
+    "database": "tuan8db_x22q",
+    "host": "dpg-clhf7kmg1b2c73aebo20-a.oregon-postgres.render.com",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    },
+    "ssl": true
   }
 }
